# eecs581-project-2

./: .gitignore  README.md  SETUP.md  estimate.txt  main.py  pyproject.toml  worklog.csv
documentation/: estimate.txt
src/: game.py  import datetime.py  main.py  models.py  settings.py  utils.py
src/play_modes/: __init__.py  ai_easy.py  ai_hard.py  ai_medium.py  two_player.py
src/views/: __init__.py  active_game_view.py  ai_mode_selection.py  game_view.py  initial_game.py  opponent_selection.py  place_ships.py  start_menu.py  turn_transition.py
